# Klipski

./: .gitignore  CLAUDE.md  Package.swift  README.md  build.sh  deploy.sh
.github/workflows/: release.yml  website.yml
Resources/: Klipski.icns
Resources/ar.lproj/: Localizable.strings
Resources/de.lproj/: Localizable.strings
Resources/en.lproj/: Localizable.strings
Resources/es.lproj/: Localizable.strings
Resources/fr.lproj/: Localizable.strings
Resources/it.lproj/: Localizable.strings
Resources/ja.lproj/: Localizable.strings
Resources/pt.lproj/: Localizable.strings
Resources/ru.lproj/: Localizable.strings
Resources/zh-Hans.lproj/: Localizable.strings
Sources/Klipski/: AppDelegate.swift  AppPaths.swift  ClipboardManager.swift  ClipyImporter.swift  HistoryStore.swift  HotKeyManager.swift  HotKeyRecorderButton.swift  Localization.swift  LoginItemManager.swift  MenuViews.swift  Paster.swift  SettingsWindowController.swift  SnippetStore.swift
Tools/: generate_icon.swift
desktop/: .gitignore  index.html  package-lock.json  package.json  vite.config.ts
desktop/src/: api.ts  main.tsx  styles.css
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/icons/: icon.icns
desktop/src-tauri/src/: clipy.rs  lib.rs  main.rs  paste.rs  store.rs
website/: .env.example  .gitignore  index.html  package-lock.json  package.json  vite.config.ts
website/public/: robots.txt  site.webmanifest  sitemap.xml
website/src/: App.tsx  i18n.tsx  main.tsx  styles.css  vite-env.d.ts
(+8 files in other folders)
