[package]
name = "klipski"
version = "1.0.0"
description = "Klipski clipboard manager"
authors = ["Klipski"]
edition = "2021"

[lib]
name = "klipski_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-global-shortcut = "2"
tauri-plugin-autostart = "2"
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
arboard = "3"
image = { version = "0.25", default-features = false, features = ["png"] }
enigo = "0.2"
roxmltree = "0.20"
uuid = { version = "1", features = ["v4"] }
base64 = "0.22"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
